# ChangeLog for media-gfx/sphinxcontrib-blockdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Nov 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.9.2.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*sphinxcontrib-blockdiag-0.9.2 (22 Oct 2011)

  22 Oct 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.9.2.ebuild:
  Version bump [485].

  19 Aug 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.8.3.ebuild, sphinxcontrib-blockdiag-0.9.0.ebuild:
  Keyworded x86.

  19 Aug 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.9.0.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.9.0 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.9.0.ebuild:
  Version bump [436].

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.8.1.ebuild, sphinxcontrib-blockdiag-0.8.3.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.3.ebuild:
  Keyworded amd64.

  15 Jun 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.8.0.ebuild, sphinxcontrib-blockdiag-0.8.1.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.1.ebuild:
  Keyworded amd64.

  08 Jun 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.7.2.ebuild, sphinxcontrib-blockdiag-0.8.0.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.0.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.8.3 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.8.3.ebuild:
  Version bump [381].

*sphinxcontrib-blockdiag-0.8.1 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.8.1.ebuild:
  Version bump [371].

*sphinxcontrib-blockdiag-0.8.0 (09 May 2011)
