@@ -1,12 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-blockdiag-0.9.0.tar.gz 6392 RMD160 e8502259d02f1f9d3be423b12140f6ca178f4c7a SHA1 a2c0a75fed0bc8099f2bb6d5ab31c345efe60c50 SHA256 d10c9e6d8164141c76cd1aeee111167e3fc64633b5e3c7999e0533199c9bb24b
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST sphinxcontrib-blockdiag-0.9.2.tar.gz 6397 RMD160 324d75b3102656082ec3fa9fb424714f6349b74e SHA1 2661e1ad3c09c8c0e02930594780c1053c8a1302 SHA256 43e4e01bdf7b6767d7f818bf7b1296114d58cf56f3ab6bb303d0530b3e8d8b30
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEAREKAAYFAk7KGiIACgkQzJrj3cAXR0l+kwCggMCDEHz7U/EaPxgU7bsKKKbs
+i5MAnRXs7ChlRDo63O/1Zw1PvnLUywql
+=VcyL
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7Ap44ACgkQzJrj3cAXR0nZkgCfSeyhZ6edDricRPxrgBI5z82q
-vHQAnRlwGBFKZcfQ4TEoFBkTllcz0sy+
-=ybek
+iEYEAREKAAYFAk7KGmgACgkQzJrj3cAXR0m9FQCeOAKFGQ97ejt3N70ai0RV6ax+
+BPAAn1OU8fRNi7gJ2ISQZOM/gJTa01kf
+=4I50
 -----END PGP SIGNATURE-----
