@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-DESCRIPTION=Sphinx extension to support media-gfx/blockdiag diagrams
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/sphinxcontrib-blockdiag/
-IUSE=pdf
-KEYWORDS=amd64 x86
-LICENSE=BSD
-RDEPEND=dev-python/setuptools dev-python/sphinx >=media-gfx/blockdiag-0.8.0 pdf? ( dev-python/reportlab ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/s/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-0.9.0.tar.gz
-_eclasses_=distutils	b4c334e216d998c4ce4b750cb091e42e	eutils	33ef77a15337022e05342d2c772a7a5a	jnrowe-pypi	4211dd4b4d8a9d76f3899257c8b7bbad	multilib	c4883399ddd3e1d2bd291607b30fded4	portability	31c75d06cb89aba6ecaef669f5425243	python	6bbd984910e27780e5d0ea543d83ef84	toolchain-funcs	39892b66d54a54fdd2b28731b975d8bf	user	4765e67e91ddcdf422aa880855b5fa77
-_md5_=72fcca29a60185669a25aceaad13a842
