@@ -1,4 +1,3 @@
-REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-blockdiag-0.9.2 %a
 REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/twython-1.4.4 %a
 REM 2011-11-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 games-puzzle/gbrainy-2.03 %a
 REM 2011-11-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 games-puzzle/gbrainy-2.03 %a
