@@ -3,6 +3,10 @@
 # $Header: $
 
   21 Nov 2011; James Rowe <jnrowe@gmail.com>
+  -sphinxcontrib-blockdiag-0.9.0.ebuild, sphinxcontrib-blockdiag-0.9.2.ebuild:
+  Keyworded x86.
+
+  21 Nov 2011; James Rowe <jnrowe@gmail.com>
   sphinxcontrib-blockdiag-0.9.2.ebuild:
   Keyworded amd64.
 
